<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/appback"
    tools:context=".view.signup">
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:background="@color/transparent">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="@dimen/_40sdp"
        android:layout_marginTop="@dimen/_20sdp"
        android:layout_marginBottom="@dimen/_30sdp"
        android:fontFamily="serif-monospace"
        android:gravity="center"
        android:text="@string/app_name"
        android:textColor="@android:color/white"
        android:textSize="@dimen/_25ssp"
        android:textStyle="bold" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:orientation="vertical"
            android:paddingLeft="@dimen/_25sdp"
            android:paddingRight="@dimen/_25sdp">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="@dimen/_35sdp"
                android:background="@android:color/white"
                android:hint="@string/user"
                android:id="@+id/username"
                android:paddingRight="@dimen/_40sdp"
                android:textSize="@dimen/_13ssp" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="@dimen/_40sdp"
                android:id="@+id/password"
                android:background="@android:color/white"
                android:hint="@string/pass"

                android:paddingRight="@dimen/_40sdp"
                android:textSize="@dimen/_13ssp" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="@dimen/_40sdp"
                android:background="@android:color/white"
                android:hint="@string/phone"
                android:id="@+id/phone"
                android:paddingRight="@dimen/_40sdp"
                android:textSize="@dimen/_13ssp" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="@dimen/_40sdp"
                android:id="@+id/email"
                android:background="@android:color/white"
                android:hint="@string/email"
                android:paddingRight="@dimen/_40sdp"
                android:textSize="@dimen/_13ssp" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="@dimen/_40sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:background="@color/appback"
                android:text="@string/signup"
                android:id="@+id/signup"
                android:textColor="@android:color/white"
                android:textSize="@dimen/_13ssp" />




        </LinearLayout>

        <ImageView
            android:layout_width="@dimen/_20sdp"
            android:layout_height="@dimen/_20sdp"
            android:layout_alignParentTop="true"
            android:layout_alignParentRight="true"
            android:layout_marginTop="@dimen/_8ssp"
            android:layout_marginRight="@dimen/_35sdp"
            android:src="@drawable/user" />
        <ImageView
            android:layout_width="@dimen/_20sdp"
            android:layout_height="@dimen/_20sdp"
            android:layout_alignParentTop="true"
            android:layout_alignParentRight="true"
            android:layout_marginTop="@dimen/_43ssp"
            android:layout_marginRight="@dimen/_35sdp"
            android:src="@drawable/lockk" />
        <ImageView
            android:layout_width="@dimen/_20sdp"
            android:layout_height="@dimen/_20sdp"
            android:layout_alignParentTop="true"
            android:layout_alignParentRight="true"
            android:layout_marginTop="@dimen/_85sdp"
            android:layout_marginRight="@dimen/_35sdp"
            app:srcCompat="@drawable/ic_phone_black_24dp" />
        <ImageView
            android:layout_width="@dimen/_20sdp"
            android:layout_height="@dimen/_20sdp"
            android:layout_alignParentTop="true"
            android:layout_alignParentRight="true"
            android:layout_marginTop="@dimen/_125sdp"
            android:layout_marginRight="@dimen/_35sdp"
            app:srcCompat="@drawable/ic_email_black_24dp" />
    </RelativeLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/_25sdp"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_marginTop="@dimen/_10sdp">
        <ImageView
            android:layout_width="@dimen/_90sdp"
            android:layout_height="@dimen/_1sdp"
            android:src="@drawable/line"
            android:background="@android:color/white"/>
        <TextView
            android:layout_width="@dimen/_20sdp"
            android:layout_height="@dimen/_20sdp"
            android:text="@string/or"
            android:layout_marginLeft="@dimen/_10sdp"
            android:textSize="@dimen/_13ssp"
            android:textColor="@android:color/white"/>
        <ImageView
            android:layout_width="@dimen/_90sdp"
            android:layout_height="@dimen/_1sdp"
            android:src="@drawable/line"
            android:layout_marginLeft="@dimen/_10sdp"
            android:background="@android:color/white"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/_35sdp"
        android:gravity="center"
        android:layout_marginTop="@dimen/_5sdp"
        android:orientation="horizontal">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="@dimen/_35sdp"
            android:gravity="center">
            <RelativeLayout
                android:layout_width="@dimen/_100sdp"
                android:layout_height="@dimen/_30sdp">

                <Button
                    android:layout_width="@dimen/_100sdp"
                    android:layout_height="@dimen/_30sdp"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentTop="true"
                    android:id="@+id/facebookLogin"
                    android:background="@drawable/editback"
                    android:drawableLeft="@drawable/facebook"
                    android:paddingLeft="@dimen/_5sdp"
                    android:paddingRight="@dimen/_10sdp"
                    android:text="@string/facebook"
                    android:textColor="@color/wordcolor"
                    android:textSize="@dimen/_10ssp" />

            </RelativeLayout>
            <Button
                android:layout_width="@dimen/_100sdp"
                android:layout_height="@dimen/_30sdp"
                android:layout_marginLeft="@dimen/_30sdp"
                android:drawableLeft="@drawable/google"
                android:paddingLeft="@dimen/_5sdp"
                android:paddingRight="@dimen/_10sdp"
                android:background="@drawable/editback"
                android:text="@string/google"
                android:textColor="@color/wordcolor"
                android:textSize="@dimen/_10ssp" />

        </TableRow>


    </LinearLayout>
    <TextView
        android:layout_width="@dimen/_80sdp"
        android:layout_height="@dimen/_19sdp"
        android:textColor="@android:color/white"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/_11sdp"
        android:id="@+id/goToLogin"
        android:textSize="@dimen/_13ssp"
        android:text="@string/loginn"/>
    <ImageView
        android:layout_width="@dimen/_75sdp"
        android:layout_height="1sp"
        android:layout_gravity="center"
        android:src="@drawable/line"
        android:background="@android:color/white"/>
</LinearLayout>
</LinearLayout>